[gd_scene load_steps=30 format=3 uid="uid://pmvrn667wplj"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_gw0j3"]
[ext_resource type="Texture2D" uid="uid://cu1vpay8autcl" path="res://assets/shop/shop-bkgd.webp" id="2_fi601"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="3_m8pu1"]
[ext_resource type="PackedScene" uid="uid://cewh1c21m23gm" path="res://scenes/coin.tscn" id="4_la82h"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="5_nnq7g"]
[ext_resource type="AudioStream" uid="uid://b13jwyutusvac" path="res://sfx/round-start.ogg" id="6_5r7uf"]
[ext_resource type="AudioStream" uid="uid://boxhyb140chdc" path="res://sfx/win.ogg" id="7_sc7d2"]
[ext_resource type="AudioStream" uid="uid://b46bsj2puuuan" path="res://sfx/lose.ogg" id="8_vcgot"]
[ext_resource type="Texture2D" uid="uid://c30b7c0wrpqnm" path="res://assets/characters/karen-portrait.webp" id="9_5v8mr"]
[ext_resource type="Texture2D" uid="uid://cqvrch6wkqk88" path="res://assets/characters/boomer.webp" id="9_dibo4"]
[ext_resource type="FontFile" uid="uid://db5beuoi8jybh" path="res://assets/Bangers-Regular.ttf" id="11_5drsk"]

[sub_resource type="LabelSettings" id="LabelSettings_m8kb6"]
font = ExtResource("11_5drsk")
font_size = 200
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_d7ty7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(456, -328)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8an6y"]
resource_name = "show"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2.4),
"transitions": PackedFloat32Array(0.3, 1, 0.3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.8, 2.4),
"transitions": PackedFloat32Array(0.3, 1, 0.3, 1),
"update": 0,
"values": [Vector2(456, -328), Vector2(456, 360), Vector2(456, 360), Vector2(456, 1096)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p2ymp"]
_data = {
"RESET": SubResource("Animation_d7ty7"),
"show": SubResource("Animation_8an6y")
}

[sub_resource type="Animation" id="Animation_t0d4t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-219, 546)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_imyt0"]
resource_name = "lose"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1760, 976), Vector2(104, -240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [0.0, -12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tmlna"]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.2, 1, 0.2, 1),
"update": 0,
"values": [Vector2(2144, 546), Vector2(1696, 546), Vector2(1696, 546), Vector2(1760, 976)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.2, 1, 0.2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_jx0vr"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1760, 976), Vector2(968, 547)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2ohe"]
_data = {
"RESET": SubResource("Animation_t0d4t"),
"lose": SubResource("Animation_imyt0"),
"show": SubResource("Animation_tmlna"),
"win": SubResource("Animation_jx0vr")
}

[sub_resource type="Animation" id="Animation_51ie8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boomer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Boomer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2257, 543)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Boomer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Boomer:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e4ns6"]
resource_name = "lose"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boomer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(144, 976), Vector2(1840, -296)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Boomer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Boomer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.588235)]
}

[sub_resource type="Animation" id="Animation_ps27e"]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boomer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Boomer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.2, 1, 0.2, 1),
"update": 0,
"values": [Vector2(-336, 543), Vector2(336, 543), Vector2(336, 543), Vector2(160, 976)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Boomer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.2, 1, 0.2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_em5dy"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Boomer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(152, 976), Vector2(1014, 562.077)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Boomer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ggt5g"]
_data = {
"RESET": SubResource("Animation_51ie8"),
"lose": SubResource("Animation_e4ns6"),
"show": SubResource("Animation_ps27e"),
"win": SubResource("Animation_em5dy")
}

[sub_resource type="LabelSettings" id="LabelSettings_nqb0c"]
font = ExtResource("11_5drsk")
font_size = 100
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_8ld2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ou4bw"]
resource_name = "show"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(0.2, 1, 0.2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dq83q"]
_data = {
"RESET": SubResource("Animation_8ld2k"),
"show": SubResource("Animation_ou4bw")
}

[node name="Shop" type="Node2D"]
script = ExtResource("1_gw0j3")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_vertical = 4
texture = ExtResource("2_fi601")
stretch_mode = 6

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("3_m8pu1")
scene = ExtResource("4_la82h")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("5_nnq7g")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBarWin" type="ProgressBar" parent="UI"]
offset_left = 256.0
offset_top = 1008.0
offset_right = 1664.0
offset_bottom = 1072.0

[node name="LabelYouWinLose" type="Label" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 456.0
offset_top = -328.0
offset_right = 1471.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 240
text = "You Win!"
label_settings = SubResource("LabelSettings_m8kb6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="LabelYouWinLose"]
libraries = {
"": SubResource("AnimationLibrary_p2ymp")
}
autoplay = "RESET"

[node name="RoundStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5r7uf")

[node name="Win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_sc7d2")

[node name="Lose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vcgot")

[node name="Karen" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-219, 546)
texture = ExtResource("9_5v8mr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Karen"]
libraries = {
"": SubResource("AnimationLibrary_g2ohe")
}
autoplay = "RESET"

[node name="Boomer" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(2257, 543)
texture = ExtResource("9_dibo4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boomer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ggt5g")
}
autoplay = "RESET"

[node name="Intro" type="Label" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_top = 456.0
offset_right = 1920.0
offset_bottom = 564.0
text = "Click to destroy your opponents icons!"
label_settings = SubResource("LabelSettings_nqb0c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Intro"]
libraries = {
"": SubResource("AnimationLibrary_dq83q")
}
autoplay = "RESET"
